--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>WebStudio</title>
 </head>
 <body>
@@ -13,14 +14,15 @@
         <a href="index.html">Web<span>Studio</span></a>
         <ul>
             <li>   <a href="./index.html">Studio</a></li>
-            <li> <a href="#">Portfolio</a></li>  
+            <li> <a href="">Portfolio</a></li>  
             <li> <a href="#">Contacts</a></li>
-        </ul>
+        </ul> 
+    </nav>
         <address>
             <a href="meilto:info@devstudio.com" >info@devstudio.com</a>
             <a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
         </address>
-    </nav>
+   
    </header>
    <main>
 <section>
