--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>WebStudio</title>
 </head>
@@ -11,71 +14,71 @@
    <header>
 
     <nav>
-        <a href="index.html">Web<span>Studio</span></a>
+        <a href="index.html" class="logo">Web<span class="logo2">Studio</span></a>
         <ul>
-            <li>   <a href="./index.html">Studio</a></li>
-            <li> <a href="">Portfolio</a></li>  
-            <li> <a href="#">Contacts</a></li>
+            <li>   <a class="link-stydio link"  href="./index.html">Studio</a></li>
+            <li> <a  class="link-portfolio link" href="./porfolio.html">Portfolio</a></li>  
+            <li> <a class="link-contacts link"  href="#">Contacts</a></li>
         </ul> 
     </nav>
-        <address>
-            <a href="meilto:info@devstudio.com" >info@devstudio.com</a>
-            <a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
+        <address class="adres">
+            <a class="adres meil" href="meilto:info@devstudio.com" >info@devstudio.com</a>
+            <a class="adres tel" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
         </address>
    
    </header>
    <main>
-<section>
-    <h1>Effective Solutionsfor Your Business</h1>
-    <button type="button"> Order Service</button>
+<section class="hero">
+    <h1 class="hero-title">Effective Solutionsfor Your Business</h1>
+    <button class="buuton" type="button"> Order Service</button>
 </section>
 <section>
-    <h2>our advantages</h2>
-    <ul>
-        <li><h3>Strategy</h3>
-            <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p></li>
-        <li><h3>Punctuality</h3>
-            <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
-        <li><h3>Diligence</h3>
-            <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
-        <li><h3>Technologies</h3>
-            <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
+    <h2 class="visually-hidden">our advantages</h2>
+    <ul class="advantages">
+        <li class="advantages__item"><h3 class="advantages__title">Strategy</h3>
+            <p class="advantages__text">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p></li>
+        <li class="advantages__item"><h3 class="advantages__title" >Punctuality</h3>
+            <p class="advantages__text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
+        <li class="advantages__item"><h3 class="advantages__title" >Diligence</h3>
+            <p class="advantages__text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
+        <li class="advantages__item"><h3 class="advantages__title" >Technologies</h3>
+            <p class="advantages__text" >Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
     </ul>
 </section>
-<section>
-<h2>What are we doing</h2>
-<ul>
-    <li><img src="./imeges/Rectangle73.jpg" alt="analytics" width="360"></li>
- <li> <img src="./imeges/Rectangle71.jpg" alt="messenger" width="360"></li>
-  <li><img src="./imeges/Rectangle72.jpg" alt="web application" width="360"></li>
+<section class="what" >
+<h2 class="what__title">What are we doing</h2>
+<ul class="what__list">
+    <li class="what__item"><img class="what__imeg" src="./imeges/Rectangle73.jpg" alt="analytics" width="360"></li>
+ <li class="what__item"> <img class="what__imeg" src="./imeges/Rectangle71.jpg" alt="messenger" width="360"></li>
+  <li class="what__item"><img class="what__imeg"  src="./imeges/Rectangle72.jpg" alt="web application" width="360"></li>
 </ul>
 </section>
-<section>
-    <h2>Our Team</h2>
+<section class="team">
+    <h2 class="team__title">Our Team</h2>
     
-    <ul> 
-        <li> <img src= "./imeges/MarkGuerrero.jpg" alt="photo Mark Guerrero"  width="264">
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+    <ul class="team__list"> 
+        <li class="team__item"> <img class="team__photo" src= "./imeges/MarkGuerrero.jpg" alt="photo Mark Guerrero"  width="264">
+            <h3 class="team__sabtitle">Mark Guerrero</h3>
+            <p class="team__text"> Product Designer</p>
         </li>
-        <li><img src="./imeges/TomFord.jpg" alt="photo Tom Ford" width="264">
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+        <li class="team__item"><img class="team__photo" src="./imeges/TomFord.jpg" alt="photo Tom Ford" width="264">
+            <h3 class="team__sabtitle" >Tom Ford</h3>
+            <p class="team__text">Frontend Developer</p>
         </li>
-        <li><img src="./imeges/CamilaGarcia.jpg" alt="photo Camila Garcia" width="264">
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+        <li class="team__item"> <img class="team__photo"  src="./imeges/CamilaGarcia.jpg" alt="photo Camila Garcia" width="264">
+            <h3 class="team__sabtitle" >  Camila Garcia</h3>
+            <p class="team__text">Marketing</p>
         </li>
-        <li><img src="./imeges/DanielWilson.jpg" alt="photo Daniel Wilson" width="264">
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+        <li class="team__item" ><img class="team__photo"  src="./imeges/DanielWilson.jpg" alt="photo Daniel Wilson" width="264">
+            <h3 class="team__sabtitle" >Daniel Wilson</h3>
+            <p class="team__text" >UI Designer</p>
         </li>
     </ul>
 </section>
    </main>
-   <footer>
-<a href="index.html">Web<span>Studio</span></a>
-<p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+   <footer  class="footer">
+<a class="logo"  href="index.html">Web<span class="footer-logo">Studio</span></a>
+<p class="footer-text" >Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
    </footer>
 </body>
 </html>
