--- a/index.html
+++ b/index.html
@@ -14,18 +14,17 @@
    <header>
 
     <nav>
-        <a href="index.html" class="logo">Web<span class="logo2">Studio</span></a>
+        <a href="index.html"class="logo">WEB<span class="logo2">STUDIO</span></a>
         <ul>
-            <li>   <a class="link-stydio link"  href="./index.html">Studio</a></li>
-            <li> <a  class="link-portfolio link" href="./porfolio.html">Portfolio</a></li>  
-            <li> <a class="link-contacts link"  href="#">Contacts</a></li>
+            <li><a class="link-stydio link" href="./index.html">Studio</a></li>
+            <li><a class="link-portfolio link" href="./porfolio.html">Portfolio</a></li>  
+            <li><a class="link-contacts link" href="#">Contacts</a></li>
         </ul> 
     </nav>
         <address class="adres">
             <a class="adres meil" href="meilto:info@devstudio.com" >info@devstudio.com</a>
             <a class="adres tel" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
         </address>
-   
    </header>
    <main>
 <section class="hero">
@@ -49,8 +48,8 @@
 <h2 class="what__title">What are we doing</h2>
 <ul class="what__list">
     <li class="what__item"><img class="what__imeg" src="./imeges/Rectangle73.jpg" alt="analytics" width="360"></li>
- <li class="what__item"> <img class="what__imeg" src="./imeges/Rectangle71.jpg" alt="messenger" width="360"></li>
-  <li class="what__item"><img class="what__imeg"  src="./imeges/Rectangle72.jpg" alt="web application" width="360"></li>
+    <li class="what__item"> <img class="what__imeg" src="./imeges/Rectangle71.jpg" alt="messenger" width="360"></li>
+    <li class="what__item"><img class="what__imeg"  src="./imeges/Rectangle72.jpg" alt="web application" width="360"></li>
 </ul>
 </section>
 <section class="team">
@@ -77,7 +76,7 @@
 </section>
    </main>
    <footer  class="footer">
-<a class="logo"  href="index.html">Web<span class="footer-logo">Studio</span></a>
+<a class="logo" href="index.html">WEB<span class="footer-logo">STUDIO</span></a>
 <p class="footer-text" >Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
    </footer>
 </body>
