--- a/porfolio.html
+++ b/porfolio.html
@@ -12,14 +12,12 @@
 </head>
 <body>
     <header>
-
-
         <nav>
             <a href="index.html" class="logo">Web<span class="logo2">Studio</span></a>
             <ul>
-                <li>   <a class="link-stydio link"  href="./index.html">Studio</a></li>
-                <li> <a  class="link-portfolio link" href="./porfolio.html">Portfolio</a></li>  
-                <li> <a class="link-contacts link"  href="#">Contacts</a></li>
+                <li><a class="link-stydio link"  href="./index.html">Studio</a></li>
+                <li><a  class="link-portfolio link" href="./porfolio.html">Portfolio</a></li>  
+                <li><a class="link-contacts link"  href="">Contacts</a></li>
             </ul> 
         </nav>
             <address class="adres">
@@ -39,23 +37,39 @@
             <li class="menu__item"><button class="menu__buuton" type="button">Marketing</button></li>
         </ul>
         <ul class="porfolio">
-            <li class="porfolio__item"><img class="porfolio__photo" src="/imeges/img1.jpg" alt="Banking App Interface Concept" width="360"><h2 class="portfolio__title">Banking App Interface Concept</h2><span class="portfolio__text">App</span></li>
-            <li class="porfolio__item"><img class="porfolio__photo" src="/imeges/img2.jpg" alt="Cashless Payment" width="360"><h2 class="portfolio__title">Cashless Payment</h2><span class="portfolio__text">Marketing</span></li>
-            <li class="porfolio__item"><img class="porfolio__photo" src="/imeges/img3.jpg" alt="Meditaion App" width="360"><h2 class="portfolio__title">Meditaion App</h2><span class="portfolio__text">App</span></li>
-            <li class="porfolio__item"><img class="porfolio__photo" src="/imeges/img4.jpg" alt="Taxi Service" width="360"><h2 class="portfolio__title">Taxi Service</h2><span class="portfolio__text">Marketing</span></li>
-            <li class="porfolio__item"><img class="porfolio__photo" src="/imeges/img5.jpg" alt="Seen Illustrationscr" width="360"><h2 class="portfolio__title">Seen Illustrationscr</h2><span class="portfolio__text">Design</span></li>
-            <li class="porfolio__item"><img class="porfolio__photo" src="/imeges/img6.jpg" alt="Online Courses" width="360"><h2 class="portfolio__title">Online Courses</h2><span class="portfolio__text">Marketing</span></li>
-            <li class="porfolio__item"><img class="porfolio__photo" src="/imeges/img7.jpg" alt="Instagram Stories Concept" width="360"><h2 class="portfolio__title">Instagram Stories Concept</h2><span class="portfolio__text">Design</span></li>
-            <li class="porfolio__item"><img class="porfolio__photo" src="/imeges/img8.jpg" alt="Organic Food" width="360"><h2 class="portfolio__title">Organic Food</h2><span class="portfolio__text">Web Site</span></li>
-            <li class="porfolio__item"><img class="porfolio__photo" src="/imeges/img9.jpg" alt="Fresh Coffee" width="360"><h2 class="portfolio__title">Fresh Coffee</h2><span class="portfolio__text">Web Site</span></li>
+            <li class="porfolio__item"><img class="porfolio__photo" src="./imeges/img1.jpg" alt="Banking App Interface Concept" width="360">
+                <h2 class="portfolio__title">Banking App Interface Concept</h2>
+                <span class="portfolio__text">App</span></li>
+            <li class="porfolio__item"><img class="porfolio__photo" src="./imeges/img2.jpg" alt="Cashless Payment" width="360">
+                <h2 class="portfolio__title">Cashless Payment</h2>
+                <span class="portfolio__text">Marketing</span></li>
+            <li class="porfolio__item"><img class="porfolio__photo" src="./imeges/img3.jpg" alt="Meditaion App" width="360">
+                <h2 class="portfolio__title">Meditaion App</h2>
+                <span class="portfolio__text">App</span></li>
+            <li class="porfolio__item"><img class="porfolio__photo" src="./imeges/img4.jpg" alt="Taxi Service" width="360">
+                <h2 class="portfolio__title">Taxi Service</h2>
+                <span class="portfolio__text">Marketing</span></li>
+            <li class="porfolio__item"><img class="porfolio__photo" src="./imeges/img5.jpg" alt="Seen Illustrationscr" width="360">
+                <h2 class="portfolio__title">Seen Illustrationscr</h2>
+                <span class="portfolio__text">Design</span></li>
+            <li class="porfolio__item"><img class="porfolio__photo" src="./imeges/img6.jpg" alt="Online Courses" width="360">
+                <h2 class="portfolio__title">Online Courses</h2>
+                <span class="portfolio__text">Marketing</span></li>
+            <li class="porfolio__item"><img class="porfolio__photo" src="./imeges/img7.jpg" alt="Instagram Stories Concept" width="360">
+                <h2 class="portfolio__title">Instagram Stories Concept</h2>
+                <span class="portfolio__text">Design</span></li>
+            <li class="porfolio__item"><img class="porfolio__photo" src="./imeges/img8.jpg" alt="Organic Food" width="360">
+                <h2 class="portfolio__title">Organic Food</h2>
+                <span class="portfolio__text">Web Site</span></li>
+            <li class="porfolio__item"><img class="porfolio__photo" src="./imeges/img9.jpg" alt="Fresh Coffee" width="360">
+                <h2 class="portfolio__title">Fresh Coffee</h2>
+                <span class="portfolio__text">Web Site</span></li>
         </ul>
         </section>
-
-
     </main>
     <footer  class="footer">
-        <a class="logo"  href="index.html">Web<span class="footer-logo">Studio</span></a>
-        <p class="footer-text" >Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <a class="logo" href="index.html">Web<span class="footer-logo">Studio</span></a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
     
 </body>
