--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
         </ul> 
     </nav>
         <address class="adres">
-            <a class="adres meil" href="meilto:info@devstudio.com" >info@devstudio.com</a>
-            <a class="adres tel" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
+            <ul>
+            <li><a class="adres meil" href="meilto:info@devstudio.com" >info@devstudio.com</a></li>
+            <li><a class="adres tel" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+        </ul>
         </address>
    </header>
    <main>
 <section class="hero">
     <h1 class="hero-title">Effective Solutionsfor Your Business</h1>
-    <button class="buuton" type="button"> Order Service</button>
+    <button class="button" type="button"> Order Service</button>
 </section>
 <section>
     <h2 class="visually-hidden">our advantages</h2>
