--- a/porfolio.html
+++ b/porfolio.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav>
-            <a href="index.html" class="logo">Web<span class="logo2">Studio</span></a>
+            <a href="index.html" class="logo">WEB<span class="logo2">STUDIO</span></a>
             <ul>
                 <li><a class="link-stydio link"  href="./index.html">Studio</a></li>
                 <li><a  class="link-portfolio link" href="./porfolio.html">Portfolio</a></li>  
@@ -68,7 +68,7 @@
         </section>
     </main>
     <footer  class="footer">
-        <a class="logo" href="index.html">Web<span class="footer-logo">Studio</span></a>
+        <a class="logo" href="index.html">WEB<span class="footer-logo">STUDIO</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
     
