--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="index.html" class="logo">WEB<span class="logo2">STUDIO</span></a>
         <ul>
             <li><a class="link-stydio link" href="./index.html">Studio</a></li>
-            <li><a class="link-portfolio link" href="./porfolio.html">Portfolio</a></li>  
+            <li><a class="link-portfolio link" href="/porfolio.html">Portfolio</a></li>  
             <li><a class="link-contacts link" href="#">Contacts</a></li>
         </ul> 
     </nav>
