--- a/porfolio.html
+++ b/porfolio.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="list">
             <a href="index.html" class="logo">WEB<span class="logo2">STUDIO</span></a>
             <ul>
                 <li><a class="link-stydio link"  href="./index.html">Studio</a></li>
