--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
    <header>
 
-    <nav>
-        <a href="index.html" class="logo">WEB<span class="logo2">STUDIO</span></a>
+    <nav class="list">
+        <a href="index.html" class="logo .link">WEB<span class="logo2">Studio</span></a>
         <ul>
-            <li><a class="link-stydio link" href="./index.html">Studio</a></li>
-            <li><a class="link-portfolio link" href="/porfolio.html">Portfolio</a></li>  
-            <li><a class="link-contacts link" href="#">Contacts</a></li>
+            <li><a class="link-heder" href="./index.html" >Studio</a></li>
+            <li><a class="link-heder" href="/porfolio.html">Portfolio</a></li>  
+            <li><a class="link-heder" href="#">Contacts</a></li>
         </ul> 
     </nav>
         <address class="adres">
