--- a/porfolio.html
+++ b/porfolio.html
@@ -13,11 +13,11 @@
 <body>
     <header>
         <nav class="list">
-            <a href="index.html" class="logo">WEB<span class="logo2">STUDIO</span></a>
+            <a href="index.html" class="logo .link">WEB<span class="logo2">STUDIO</span></a>
             <ul>
-                <li><a class="link-stydio link"  href="./index.html">Studio</a></li>
-                <li><a  class="link-portfolio link" href="./porfolio.html">Portfolio</a></li>  
-                <li><a class="link-contacts link"  href="">Contacts</a></li>
+                <li><a class="link-heder"  href="./index.html">Studio</a></li>
+                <li><a  class="link-heder" href="./porfolio.html">Portfolio</a></li>  
+                <li><a class="link-heder"  href="">Contacts</a></li>
             </ul> 
         </nav>
             <address class="adres">
@@ -29,12 +29,12 @@
     <main>
         <section>
             <h1 class="visually-hidden">porfolio</h1>
-         <ul class="menu">
-            <li class="menu__item"><button class="menu__buuton" type="button">All</button></li>
-            <li class="menu__item"><button class="menu__buuton" type="button">Web Site</button></li>
-            <li class="menu__item"><button class="menu__buuton" type="button">App</button></li>
-            <li class="menu__item"><button class="menu__buuton" type="button">Design</button></li>
-            <li class="menu__item"><button class="menu__buuton" type="button">Marketing</button></li>
+         <ul class="list">
+            <li class="list__item"><button class="list__buuton" type="button">All</button></li>
+            <li class="list__item"><button class="list__buuton" type="button">Web Site</button></li>
+            <li class="list__item"><button class="list__buuton" type="button">App</button></li>
+            <li class="list__item"><button class="list__buuton" type="button">Design</button></li>
+            <li class="list__item"><button class="list__buuton" type="button">Marketing</button></li>
         </ul>
         <ul class="porfolio">
             <li class="porfolio__item"><img class="porfolio__photo" src="./imeges/img1.jpg" alt="Banking App Interface Concept" width="360">
