--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
    <header>
 
     <nav class="list">
-        <a href="index.html" class="logo .link">WEB<span class="logo2">Studio</span></a>
+        <a class="logo .link" href="index.html" >WEB<span class="logo2">Studio</span></a>
         <ul>
-            <li><a class="link-heder" href="./index.html" >Studio</a></li>
-            <li><a class="link-heder" href="/porfolio.html">Portfolio</a></li>  
-            <li><a class="link-heder" href="#">Contacts</a></li>
+            <li><a class="link-heder .link" href="./index.html" >Studio</a></li>
+            <li><a class="link-heder .link" href="/portfolio.html">Portfolio</a></li>  
+            <li><a class="link-heder .link" href="#">Contacts</a></li>
         </ul> 
     </nav>
         <address class="adres">
             <ul>
-            <li><a class="adres meil" href="meilto:info@devstudio.com" >info@devstudio.com</a></li>
-            <li><a class="adres tel" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+            <li><a class="adres__meil .link" href="meilto:info@devstudio.com" >info@devstudio.com</a></li>
+            <li><a class="adres__tel .link" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
         </ul>
         </address>
    </header>
