--- a/portfolio.html
+++ b/portfolio.html
@@ -16,13 +16,13 @@
             <a href="index.html" class="logo .link">WEB<span class="logo2">STUDIO</span></a>
             <ul>
                 <li><a class="link-heder"  href="./index.html">Studio</a></li>
-                <li><a  class="link-heder" href="./porfolio.html">Portfolio</a></li>  
+                <li><a  class="link-heder" href="./portfolio.html">Portfolio</a></li>  
                 <li><a class="link-heder"  href="">Contacts</a></li>
             </ul> 
         </nav>
             <address class="adres">
-                <a class="adres meil" href="meilto:info@devstudio.com" >info@devstudio.com</a>
-                <a class="adres tel" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
+                <a class="adres__meil" href="meilto:info@devstudio.com" >info@devstudio.com</a>
+                <a class="adres__tel" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
             </address>
        
     </header>
