--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </section>
    </main>
    <footer  class="footer">
-<a class="logo" href="index.html">WEB<span class="footer-logo">STUDIO</span></a>
+<a class="logo .link" href="index.html">WEB<span class="footer-logo">STUDIO</span></a>
 <p class="footer-text" >Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
    </footer>
 </body>
