--- a/portfolio.html
+++ b/portfolio.html
@@ -14,10 +14,10 @@
     <header>
         <nav class="list">
             <a href="index.html" class="logo .link">WEB<span class="logo2">STUDIO</span></a>
-            <ul>
-                <li><a class="link-heder"  href="./index.html">Studio</a></li>
-                <li><a  class="link-heder" href="./portfolio.html">Portfolio</a></li>  
-                <li><a class="link-heder"  href="">Contacts</a></li>
+            <ul class="list">
+                <li><a class="link-heder link"  href="./index.html">Studio</a></li>
+                <li><a  class="link-heder link" href="./portfolio.html">Portfolio</a></li>  
+                <li><a class="link-heder link"  href="">Contacts</a></li>
             </ul> 
         </nav>
             <address class="adres">
@@ -28,15 +28,15 @@
     </header>
     <main>
         <section>
-            <h1 class="visually-hidden">porfolio</h1>
-         <ul class="list">
-            <li class="list__item"><button class="list__buuton" type="button">All</button></li>
-            <li class="list__item"><button class="list__buuton" type="button">Web Site</button></li>
-            <li class="list__item"><button class="list__buuton" type="button">App</button></li>
-            <li class="list__item"><button class="list__buuton" type="button">Design</button></li>
-            <li class="list__item"><button class="list__buuton" type="button">Marketing</button></li>
+            <h1 hidden class="visually-hidden">porfolio</h1>
+         <ul class="lists list">
+            <li class="lists__item"><button class="list__buuton" type="button">All</button></li>
+            <li class="lists__item"><button class="list__buuton" type="button">Web Site</button></li>
+            <li class="lists__item"><button class="list__buuton" type="button">App</button></li>
+            <li class="lists__item"><button class="list__buuton" type="button">Design</button></li>
+            <li class="lists__item"><button class="list__buuton" type="button">Marketing</button></li>
         </ul>
-        <ul class="porfolio">
+        <ul class="porfolio list">
             <li class="porfolio__item"><img class="porfolio__photo" src="./imeges/img1.jpg" alt="Banking App Interface Concept" width="360">
                 <h2 class="portfolio__title">Banking App Interface Concept</h2>
                 <span class="portfolio__text">App</span></li>
@@ -68,7 +68,7 @@
         </section>
     </main>
     <footer  class="footer">
-        <a class="logo" href="index.html">WEB<span class="footer-logo">STUDIO</span></a>
+        <a class="logo .link" href="index.html">WEB<span class="footer-logo">STUDIO</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
     
