--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 <body>
    <header>
 
-    <nav class="list">
+    <nav >
+       
         <a class="logo .link" href="index.html" >WEB<span class="logo2">Studio</span></a>
-        <ul>
+        <ul class="list">
             <li><a class="link-heder .link" href="./index.html" >Studio</a></li>
             <li><a class="link-heder .link" href="/portfolio.html">Portfolio</a></li>  
             <li><a class="link-heder .link" href="#">Contacts</a></li>
