--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <button class="button" type="button"> Order Service</button>
 </section>
 <section>
-    <h2 class="visually-hidden">our advantages</h2>
-    <ul class="advantages">
+    <h2 hidden class="visually-hidden">our advantages</h2>
+    <ul class="advantages list">
         <li class="advantages__item"><h3 class="advantages__title">Strategy</h3>
             <p class="advantages__text">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p></li>
         <li class="advantages__item"><h3 class="advantages__title" >Punctuality</h3>
@@ -48,8 +48,8 @@
     </ul>
 </section>
 <section class="what" >
-<h2 class="what__title">What are we doing</h2>
-<ul class="what__list">
+<h2  class="what__title">What are we doing</h2>
+<ul class="what__list list">
     <li class="what__item"><img class="what__imeg" src="./imeges/Rectangle73.jpg" alt="analytics" width="360"></li>
     <li class="what__item"> <img class="what__imeg" src="./imeges/Rectangle71.jpg" alt="messenger" width="360"></li>
     <li class="what__item"><img class="what__imeg"  src="./imeges/Rectangle72.jpg" alt="web application" width="360"></li>
@@ -58,7 +58,7 @@
 <section class="team">
     <h2 class="team__title">Our Team</h2>
     
-    <ul class="team__list"> 
+    <ul class="team__list list"> 
         <li class="team__item"> <img class="team__photo" src= "./imeges/MarkGuerrero.jpg" alt="photo Mark Guerrero"  width="264">
             <h3 class="team__sabtitle">Mark Guerrero</h3>
             <p class="team__text"> Product Designer</p>
@@ -79,7 +79,7 @@
 </section>
    </main>
    <footer  class="footer">
-<a class="logo .link" href="index.html">WEB<span class="footer-logo">STUDIO</span></a>
+<a class="logo .link" href="index.html">WEB<span class="footer-logo">Studio</span></a>
 <p class="footer-text" >Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
    </footer>
 </body>
