--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a class="logo .link" href="index.html" >WEB<span class="logo2">Studio</span></a>
         <ul class="list">
             <li><a class="link-heder .link" href="./index.html" >Studio</a></li>
-            <li><a class="link-heder .link" href="/portfolio.html">Portfolio</a></li>  
+            <li><a class="link-heder .link" href="./portfolio.html">Portfolio</a></li>  
             <li><a class="link-heder .link" href="#">Contacts</a></li>
         </ul> 
     </nav>
