--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
             <a href="index.html" class="logo .link">WEB<span class="logo2">STUDIO</span></a>
             <ul class="list">
                 <li><a class="link-heder link"  href="./index.html">Studio</a></li>
-                <li><a  class="link-heder link" href="./portfolio.html">Portfolio</a></li>  
+                <li><a  class="link-heder link"href="./portfolio.html">Portfolio</a></li>  
                 <li><a class="link-heder link"  href="">Contacts</a></li>
             </ul> 
         </nav>
@@ -30,11 +30,11 @@
         <section>
             <h1 hidden class="visually-hidden">porfolio</h1>
          <ul class="lists list">
-            <li class="lists__item"><button class="list__buuton" type="button">All</button></li>
-            <li class="lists__item"><button class="list__buuton" type="button">Web Site</button></li>
-            <li class="lists__item"><button class="list__buuton" type="button">App</button></li>
-            <li class="lists__item"><button class="list__buuton" type="button">Design</button></li>
-            <li class="lists__item"><button class="list__buuton" type="button">Marketing</button></li>
+            <li class="lists__item"><button class="lists__buuton" type="button">All</button></li>
+            <li class="lists__item"><button class="lists__buuton" type="button">Web Site</button></li>
+            <li class="lists__item"><button class="lists__buuton" type="button">App</button></li>
+            <li class="lists__item"><button class="lists__buuton" type="button">Design</button></li>
+            <li class="lists__item"><button class="lists__buuton" type="button">Marketing</button></li>
         </ul>
         <ul class="porfolio list">
             <li class="porfolio__item"><img class="porfolio__photo" src="./imeges/img1.jpg" alt="Banking App Interface Concept" width="360">
