--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <nav >
        
-        <a class="logo .link" href="index.html" >WEB<span class="logo2">Studio</span></a>
+        <a class="Logo .link" href="index.html" >WEB<span class="logo2">Studio</span></a>
         <ul class="list">
             <li><a class="link-heder .link" href="./index.html" >Studio</a></li>
             <li><a class="link-heder .link" href="./portfolio.html">Portfolio</a></li>  
@@ -79,7 +79,7 @@
 </section>
    </main>
    <footer  class="footer">
-<a class="logo .link" href="index.html">WEB<span class="footer-logo">Studio</span></a>
+<a class="Logo .link" href="index.html">WEB<span class="footer-logo">Studio</span></a>
 <p class="footer-text" >Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
    </footer>
 </body>
