--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav class="list">
-            <a href="index.html" class="logo .link">WEB<span class="logo2">STUDIO</span></a>
+            <a href="index.html" class="Logo .link">WEB<span class="logo2">STUDIO</span></a>
             <ul class="list">
                 <li><a class="link-heder link"  href="./index.html">Studio</a></li>
                 <li><a  class="link-heder link"href="./portfolio.html">Portfolio</a></li>  
@@ -37,38 +37,38 @@
             <li class="lists__item"><button class="lists__buuton" type="button">Marketing</button></li>
         </ul>
         <ul class="porfolio list">
-            <li class="porfolio__item"><img class="porfolio__photo" src="./imeges/img1.jpg" alt="Banking App Interface Concept" width="360">
+            <li class="porfolio__item"><a href=""><img class="porfolio__photo" src="./imeges/img1.jpg" alt="Banking App Interface Concept" width="360">
                 <h2 class="portfolio__title">Banking App Interface Concept</h2>
-                <span class="portfolio__text">App</span></li>
-            <li class="porfolio__item"><img class="porfolio__photo" src="./imeges/img2.jpg" alt="Cashless Payment" width="360">
+                <span class="portfolio__text">App</span></a></li>
+            <li class="porfolio__item"><a href=""><img class="porfolio__photo" src="./imeges/img2.jpg" alt="Cashless Payment" width="360">
                 <h2 class="portfolio__title">Cashless Payment</h2>
-                <span class="portfolio__text">Marketing</span></li>
-            <li class="porfolio__item"><img class="porfolio__photo" src="./imeges/img3.jpg" alt="Meditaion App" width="360">
+                <span class="portfolio__text">Marketing</span></a></li>
+            <li class="porfolio__item"><a href=""><img class="porfolio__photo" src="./imeges/img3.jpg" alt="Meditaion App" width="360">
                 <h2 class="portfolio__title">Meditaion App</h2>
-                <span class="portfolio__text">App</span></li>
-            <li class="porfolio__item"><img class="porfolio__photo" src="./imeges/img4.jpg" alt="Taxi Service" width="360">
+                <span class="portfolio__text">App</span></a></li>
+            <li class="porfolio__item"><a href=""><img class="porfolio__photo" src="./imeges/img4.jpg" alt="Taxi Service" width="360">
                 <h2 class="portfolio__title">Taxi Service</h2>
-                <span class="portfolio__text">Marketing</span></li>
-            <li class="porfolio__item"><img class="porfolio__photo" src="./imeges/img5.jpg" alt="Seen Illustrationscr" width="360">
+                <span class="portfolio__text">Marketing</span></a></li>
+            <li class="porfolio__item"><a href=""><img class="porfolio__photo" src="./imeges/img5.jpg" alt="Seen Illustrationscr" width="360">
                 <h2 class="portfolio__title">Seen Illustrationscr</h2>
-                <span class="portfolio__text">Design</span></li>
-            <li class="porfolio__item"><img class="porfolio__photo" src="./imeges/img6.jpg" alt="Online Courses" width="360">
+                <span class="portfolio__text">Design</span></a></li>
+            <li class="porfolio__item"><a href=""><img class="porfolio__photo" src="./imeges/img6.jpg" alt="Online Courses" width="360">
                 <h2 class="portfolio__title">Online Courses</h2>
-                <span class="portfolio__text">Marketing</span></li>
-            <li class="porfolio__item"><img class="porfolio__photo" src="./imeges/img7.jpg" alt="Instagram Stories Concept" width="360">
+                <span class="portfolio__text">Marketing</span></a></li>
+            <li class="porfolio__item"><a href=""><img class="porfolio__photo" src="./imeges/img7.jpg" alt="Instagram Stories Concept" width="360">
                 <h2 class="portfolio__title">Instagram Stories Concept</h2>
-                <span class="portfolio__text">Design</span></li>
-            <li class="porfolio__item"><img class="porfolio__photo" src="./imeges/img8.jpg" alt="Organic Food" width="360">
+                <span class="portfolio__text">Design</span></a></li>
+            <li class="porfolio__item"><a href=""><img class="porfolio__photo" src="./imeges/img8.jpg" alt="Organic Food" width="360">
                 <h2 class="portfolio__title">Organic Food</h2>
-                <span class="portfolio__text">Web Site</span></li>
-            <li class="porfolio__item"><img class="porfolio__photo" src="./imeges/img9.jpg" alt="Fresh Coffee" width="360">
+                <span class="portfolio__text">Web Site</span></a></li>
+            <li class="porfolio__item"><a href=""><img class="porfolio__photo" src="./imeges/img9.jpg" alt="Fresh Coffee" width="360">
                 <h2 class="portfolio__title">Fresh Coffee</h2>
-                <span class="portfolio__text">Web Site</span></li>
+                <span class="portfolio__text">Web Site</span></a></li>
         </ul>
         </section>
     </main>
     <footer  class="footer">
-        <a class="logo .link" href="index.html">WEB<span class="footer-logo">STUDIO</span></a>
+        <a class="Logo .link" href="index.html">WEB<span class="footer-logo">STUDIO</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
     
