--- a/portfolio.html
+++ b/portfolio.html
@@ -37,33 +37,33 @@
             <li class="lists__item"><button class="lists__buuton" type="button">Marketing</button></li>
         </ul>
         <ul class="porfolio list">
-            <li class="porfolio__item"><a href=""><img class="porfolio__photo" src="./imeges/img1.jpg" alt="Banking App Interface Concept" width="360">
+            <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./imeges/img1.jpg" alt="Banking App Interface Concept" width="360">
                 <h2 class="portfolio__title">Banking App Interface Concept</h2>
-                <span class="portfolio__text">App</span></a></li>
-            <li class="porfolio__item"><a href=""><img class="porfolio__photo" src="./imeges/img2.jpg" alt="Cashless Payment" width="360">
+                <p class="portfolio__text">App</p></a></li>
+            <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./imeges/img2.jpg" alt="Cashless Payment" width="360">
                 <h2 class="portfolio__title">Cashless Payment</h2>
-                <span class="portfolio__text">Marketing</span></a></li>
-            <li class="porfolio__item"><a href=""><img class="porfolio__photo" src="./imeges/img3.jpg" alt="Meditaion App" width="360">
+                <p class="portfolio__text">Marketing</p></a></li>
+            <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./imeges/img3.jpg" alt="Meditaion App" width="360">
                 <h2 class="portfolio__title">Meditaion App</h2>
-                <span class="portfolio__text">App</span></a></li>
-            <li class="porfolio__item"><a href=""><img class="porfolio__photo" src="./imeges/img4.jpg" alt="Taxi Service" width="360">
+                <p class="portfolio__text">App</p></a></li>
+            <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./imeges/img4.jpg" alt="Taxi Service" width="360">
                 <h2 class="portfolio__title">Taxi Service</h2>
-                <span class="portfolio__text">Marketing</span></a></li>
-            <li class="porfolio__item"><a href=""><img class="porfolio__photo" src="./imeges/img5.jpg" alt="Seen Illustrationscr" width="360">
+                <p class="portfolio__text">Marketing</p></a></li>
+            <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./imeges/img5.jpg" alt="Seen Illustrationscr" width="360">
                 <h2 class="portfolio__title">Seen Illustrationscr</h2>
-                <span class="portfolio__text">Design</span></a></li>
-            <li class="porfolio__item"><a href=""><img class="porfolio__photo" src="./imeges/img6.jpg" alt="Online Courses" width="360">
+                <p class="portfolio__text">Design</p></a></li>
+            <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./imeges/img6.jpg" alt="Online Courses" width="360">
                 <h2 class="portfolio__title">Online Courses</h2>
-                <span class="portfolio__text">Marketing</span></a></li>
-            <li class="porfolio__item"><a href=""><img class="porfolio__photo" src="./imeges/img7.jpg" alt="Instagram Stories Concept" width="360">
+                <p class="portfolio__text">Marketing</p></a></li>
+            <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./imeges/img7.jpg" alt="Instagram Stories Concept" width="360">
                 <h2 class="portfolio__title">Instagram Stories Concept</h2>
-                <span class="portfolio__text">Design</span></a></li>
-            <li class="porfolio__item"><a href=""><img class="porfolio__photo" src="./imeges/img8.jpg" alt="Organic Food" width="360">
+                <p class="portfolio__text">Design</p></a></li>
+            <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./imeges/img8.jpg" alt="Organic Food" width="360">
                 <h2 class="portfolio__title">Organic Food</h2>
-                <span class="portfolio__text">Web Site</span></a></li>
-            <li class="porfolio__item"><a href=""><img class="porfolio__photo" src="./imeges/img9.jpg" alt="Fresh Coffee" width="360">
+                <p class="portfolio__text">Web Site</p></a></li>
+            <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./imeges/img9.jpg" alt="Fresh Coffee" width="360">
                 <h2 class="portfolio__title">Fresh Coffee</h2>
-                <span class="portfolio__text">Web Site</span></a></li>
+                <p class="portfolio__text">Web Site</p></a></li>
         </ul>
         </section>
     </main>
