--- a/index.html
+++ b/index.html
@@ -50,28 +50,28 @@
 <section class="what" >
 <h2  class="what__title">What are we doing</h2>
 <ul class="what__list list">
-    <li class="what__item"><img class="what__imeg" src="./imeges/Rectangle73.jpg" alt="analytics" width="360"></li>
-    <li class="what__item"> <img class="what__imeg" src="./imeges/Rectangle71.jpg" alt="messenger" width="360"></li>
-    <li class="what__item"><img class="what__imeg"  src="./imeges/Rectangle72.jpg" alt="web application" width="360"></li>
+    <li class="what__item"><img class="what__imeg" src="./images/Rectangle73.jpg" alt="analytics" width="360"></li>
+    <li class="what__item"> <img class="what__imeg" src="./images/Rectangle71.jpg" alt="messenger" width="360"></li>
+    <li class="what__item"><img class="what__imeg"  src="./images/Rectangle72.jpg" alt="web application" width="360"></li>
 </ul>
 </section>
 <section class="team">
     <h2 class="team__title">Our Team</h2>
     
     <ul class="team__list list"> 
-        <li class="team__item"> <img class="team__photo" src= "./imeges/MarkGuerrero.jpg" alt="photo Mark Guerrero"  width="264">
+        <li class="team__item"> <img class="team__photo" src= "./images/MarkGuerrero.jpg" alt="photo Mark Guerrero"  width="264">
             <h3 class="team__sabtitle">Mark Guerrero</h3>
             <p class="team__text"> Product Designer</p>
         </li>
-        <li class="team__item"><img class="team__photo" src="./imeges/TomFord.jpg" alt="photo Tom Ford" width="264">
+        <li class="team__item"><img class="team__photo" src="./images/TomFord.jpg" alt="photo Tom Ford" width="264">
             <h3 class="team__sabtitle" >Tom Ford</h3>
             <p class="team__text">Frontend Developer</p>
         </li>
-        <li class="team__item"> <img class="team__photo"  src="./imeges/CamilaGarcia.jpg" alt="photo Camila Garcia" width="264">
+        <li class="team__item"> <img class="team__photo"  src="./images/CamilaGarcia.jpg" alt="photo Camila Garcia" width="264">
             <h3 class="team__sabtitle" >  Camila Garcia</h3>
             <p class="team__text">Marketing</p>
         </li>
-        <li class="team__item" ><img class="team__photo"  src="./imeges/DanielWilson.jpg" alt="photo Daniel Wilson" width="264">
+        <li class="team__item" ><img class="team__photo"  src="./images/DanielWilson.jpg" alt="photo Daniel Wilson" width="264">
             <h3 class="team__sabtitle" >Daniel Wilson</h3>
             <p class="team__text" >UI Designer</p>
         </li>
@@ -79,7 +79,7 @@
 </section>
    </main>
    <footer  class="footer">
-<a class="Logo .link" href="index.html">WEB<span class="footer-logo">Studio</span></a>
+<a class="Logo link" href="index.html">WEB<span class="footer-logo">Studio</span></a>
 <p class="footer-text" >Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
    </footer>
 </body>
