--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
             <a href="index.html" class="Logo .link">WEB<span class="logo2">STUDIO</span></a>
             <ul class="list">
                 <li><a class="link-heder link"  href="./index.html">Studio</a></li>
-                <li><a  class="link-heder link"href="./portfolio.html">Portfolio</a></li>  
+                <li><a  class="link-heder link" href="./portfolio.html">Portfolio</a></li>  
                 <li><a class="link-heder link"  href="">Contacts</a></li>
             </ul> 
         </nav>
@@ -37,31 +37,31 @@
             <li class="lists__item"><button class="lists__buuton" type="button">Marketing</button></li>
         </ul>
         <ul class="porfolio list">
-            <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./imeges/img1.jpg" alt="Banking App Interface Concept" width="360">
+            <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./images/img1.jpg" alt="Banking App Interface Concept" width="360">
                 <h2 class="portfolio__title">Banking App Interface Concept</h2>
                 <p class="portfolio__text">App</p></a></li>
-            <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./imeges/img2.jpg" alt="Cashless Payment" width="360">
+            <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./images/img2.jpg" alt="Cashless Payment" width="360">
                 <h2 class="portfolio__title">Cashless Payment</h2>
                 <p class="portfolio__text">Marketing</p></a></li>
-            <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./imeges/img3.jpg" alt="Meditaion App" width="360">
-                <h2 class="portfolio__title">Meditaion App</h2>
+            <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./images/img3.jpg" alt="Meditaion App" width="360">
+                <h2 class="portfolio__title">Meditation App</h2>
                 <p class="portfolio__text">App</p></a></li>
-            <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./imeges/img4.jpg" alt="Taxi Service" width="360">
+            <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./images/img4.jpg" alt="Taxi Service" width="360">
                 <h2 class="portfolio__title">Taxi Service</h2>
                 <p class="portfolio__text">Marketing</p></a></li>
-            <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./imeges/img5.jpg" alt="Seen Illustrationscr" width="360">
-                <h2 class="portfolio__title">Seen Illustrationscr</h2>
+            <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./images/img5.jpg" alt="Seen Illustrationscr" width="360">
+                <h2 class="portfolio__title">Screen Illustrations</h2>
                 <p class="portfolio__text">Design</p></a></li>
-            <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./imeges/img6.jpg" alt="Online Courses" width="360">
+            <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./images/img6.jpg" alt="Online Courses" width="360">
                 <h2 class="portfolio__title">Online Courses</h2>
                 <p class="portfolio__text">Marketing</p></a></li>
-            <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./imeges/img7.jpg" alt="Instagram Stories Concept" width="360">
+            <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./images/img7.jpg" alt="Instagram Stories Concept" width="360">
                 <h2 class="portfolio__title">Instagram Stories Concept</h2>
                 <p class="portfolio__text">Design</p></a></li>
-            <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./imeges/img8.jpg" alt="Organic Food" width="360">
+            <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./images/img8.jpg" alt="Organic Food" width="360">
                 <h2 class="portfolio__title">Organic Food</h2>
                 <p class="portfolio__text">Web Site</p></a></li>
-            <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./imeges/img9.jpg" alt="Fresh Coffee" width="360">
+            <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./images/img9.jpg" alt="Fresh Coffee" width="360">
                 <h2 class="portfolio__title">Fresh Coffee</h2>
                 <p class="portfolio__text">Web Site</p></a></li>
         </ul>
